; ModuleID = '/home/carl/AnghaBench/php-src/ext/gmp/extr_gmp.c_gmp_zval_unary_op.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gmp/extr_gmp.c_gmp_zval_unary_op.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32 (i32, i32)*)* @gmp_zval_unary_op to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gmp_zval_unary_op(i32* %0, i32* %1, i32 (i32, i32)* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32 (i32, i32)*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 (i32, i32)* %2, i32 (i32, i32)** %6, align 8
  %10 = load i32, i32* %7, align 4
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %9, align 4
  %13 = call i32 @FETCH_GMP_ZVAL(i32 %10, i32* %11, i32 %12)
  %14 = load i32, i32* %8, align 4
  %15 = call i32 @INIT_GMP_RETVAL(i32 %14)
  %16 = load i32 (i32, i32)*, i32 (i32, i32)** %6, align 8
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* %7, align 4
  %19 = call i32 %16(i32 %17, i32 %18)
  %20 = load i32, i32* %9, align 4
  %21 = call i32 @FREE_GMP_TEMP(i32 %20)
  ret void
}

declare dso_local i32 @FETCH_GMP_ZVAL(i32, i32*, i32) #1

declare dso_local i32 @INIT_GMP_RETVAL(i32) #1

declare dso_local i32 @FREE_GMP_TEMP(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
